2004/02/05 22:46 (+0100) kaffeetisch

	* gtk2perl.h
	* Makefile.PL: Depend on ExtUtils::PkgConfig 1.03 for the new
	write_version_macros.  Use it to create version macros for pango
	in gtk2perl-versions.h.

	* xs/Gtk2.xs: Implement xsub accessors to the above macros.

	* xs/PangoLayout.xs
	* t/PangoLayout.t: Use the new macros to protect
	backspace_deletes_character.

2004/02/04 19:09 (-0500) rwmcfa1

	* t/00.Gtk2.t: skip count was incorrect, failed with no DISPLAY

2004/02/05 02:40 (-0500) muppetman

	A t/GtkFileChooser.t
	M MANIFEST
	  add a nearly-complete test of Gtk2::FileChooser.  some tests need
	  to be fleshed out.

2004/02/04 23:11 (-0500) muppetman

	* pm/SimpleList.pm, xs/GdkDnd.xs: minor commentary updates.

	* pm/SimpleMenu.pm: commentary updates; ross wrote SimpleMenu 
	himself (unless i'm mistaken), but the doc appears to have been
	copied from SimpleList.

2004/02/04 19:09 (-0500) rwmcfa1

	* xs/Gtk2.xs: implemented linked version checking in BOOT section

2004/02/04 20:24 (+0100) kaffeetisch

	* t/00.Gtk2.t
	* xs/Gtk2.xs: Use and test Glib's new GPerlArgv.

2004/02/04 19:20 (+0100) kaffeetisch

	* t/GtkCellRenderer.t: Make strict-safe.  Use different counters
	for the compatability and the new stuff.

	* xs/GtkCellRenderer.xs: Hush a compiler warning.

2004/02/04 02:13 (-0500) muppetman

	* xs/GtkCellRenderer.xs: re-vamp vfunc support for be more natural
	and perlish.  use inheritable ALL_CAPS_METHODS instead of the
	freakish and highly non-standard system used in the past.  the update
	is rather ugly, because we still support the old way for
	backwards-compatibility.  requires new code just added to Glib which
	calls _INSTALL_OVERRIDES as part of Glib::Type::register_object.

	* examples/cellrenderer_popup.pl, examples/cellrenderer_spinbutton.pl,
	t/GtkCellRenderer.t: updated for new cellrenderer techniques

	* examples/cellrenderer_date.pl: updated for new cellrenderer
	techniques; also copied in some of torsten's experimental date